Complete secret creation from file
